# dcf-calculator

./: .coverage  README.md  main.py  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-dcf-analysis-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dcf-analysis-api/checklists/: requirements.md
specs/001-dcf-analysis-api/contracts/: openapi.yaml
src/: cli.py  main.py
src/api/: controllers.py
src/models/: request.py  response.py
src/services/: dcf_calculation_service.py
tests/integration/: test_dcf_api_endpoints.py
tests/unit/: test_dcf_calculation_service.py
