[project]
name = "dcf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "poethepoet>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "poethepoet>=0.25.0",
]

[tool.uv.workspace]
members = [
    "app",
]

[tool.poe.tasks]
dev = "uvicorn src.main:app --host 127.0.0.1 --port 8000 --reload"
test = "pytest tests/unit tests/integration -v"
test-unit = "pytest tests/unit -v"
test-integration = "pytest tests/integration -v"
